<resources>
    <string name="app_name">GamesBacklogManager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="game_backlog">Game Backlog</string>
    <string name="title_activity_game_details">GameDetailsActivity</string>
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="status">Status</string>
    <string name="date_added">Date added</string>
    <string name="notes">Notes</string>
    <string name="default_value">Default value</string>
    <string name="game_details">Game Details</string>
    <string name="dialog_game_deletion_confirmation">Are you sure you want to delete this game?</string>
    <string name="delete_game">Delete game</string>
    <string name="modify_game">Modify game</string>
    <string name="cancel">Cancel</string>
    <string name="game_deleted">Game has been deleted</string>
    <string name="title_activity_add_game">Add Game</string>
    <string name="save_game">Save game</string>
    <string name="add_game">Add Game</string>
    <string name="pick_random_game">Pick random game</string>
    <string name="title_is_required">Title is required!</string>
    <string name="platform_is_required">Platform is required!</string>
    <string name="title_field_is_empty">Title field is empty</string>
    <string name="plaftorm_field_is_empty">Platform field is empty</string>
    <string name="game_has_been_added">Game has been added</string>
    <string name="title_activity_modify_game">Modify Game</string>
    <string name="game_has_been_modified">Game has been modified</string>
</resources>
